WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
165621
REGRESSION (URL parser): Relative URLs aren’t resolved correctly when the base URL is an applewebdata: URL
https://bugs.webkit.org/show_bug.cgi?id=165621
Summary
REGRESSION (URL parser): Relative URLs aren’t resolved correctly when the bas...
mitz
Reported
2016-12-08 12:58:49 PST
Relative URLs aren’t resolved correctly when the base URL is an applewebdata: URL. Loading the HTML string "<img src='relative.jpg'>" results in the image’s src property evaluating to something like applewebdata://D5439AC2-A80D-41D9-9DCE-3A61F54E56E0relative.jpg instead of applewebdata://D5439AC2-A80D-41D9-9DCE-3A61F54E56E0/relative.jpg (notice the missing forward slash).
Attachments
Patch
(4.14 KB, patch)
2016-12-08 14:39 PST
,
Alex Christensen
mitz: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
mitz
Comment 1
2016-12-08 13:46:11 PST
<
rdar://problem/29582309
>
Alex Christensen
Comment 2
2016-12-08 14:39:09 PST
Created
attachment 296571
[details]
Patch
mitz
Comment 3
2016-12-08 14:40:39 PST
Comment on
attachment 296571
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=296571&action=review
Thanks for the quick fix!
> Source/WebCore/ChangeLog:4 > +
https://bugs.webkit.org/show_bug.cgi?id=165621
Radar URL?
Alex Christensen
Comment 4
2016-12-08 14:42:59 PST
http://trac.webkit.org/changeset/209572
Alex Christensen
Comment 5
2016-12-08 14:50:44 PST
rdar://problem/29582309
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug