Source/WebCore/platform/URLParser.cpp
@@ -1355,6 +1355,10 @@ void URLParser::parse(const CharacterType* input, const unsigned length, const U
                 break;
             default:
                 copyURLPartsUntil(base, URLPart::PathAfterLastSlash, c, isUTF8Encoding);
+                if (currentPosition(c) && parsedDataView(currentPosition(c) - 1) != '/') {
+                    appendToASCIIBuffer('/');
+                    m_url.m_pathAfterLastSlash = currentPosition(c);
+                }
                 state = State::Path;
                 break;
             }
